--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@firebase/app": "^0.4.0",
+    "@firebase/firestore": "^1.3.0",
+    "@firebase/util": "^0.2.14",
+    "firebase": "^6.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
