--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@firebase/util": "^0.2.14",
     "firebase": "^6.0.1",
     "vue": "^2.5.2",
+    "vue-chat-scroll": "^1.3.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
